# otus-cpp

./: CMakeLists.txt  Dockerfile  allocator.cpp  compose.yml  flake.nix  gtest_version.cpp  ip_filter  ip_filter.cpp  ip_filter_result.tsv  print_ip.cpp
.github/workflows/: release.yml
cmake/: update_version.cmake
homework02/: CMakeLists.txt  main.cpp  test_version_gtest.cpp
homework02/.github/workflows/: homework02.yml
ip_filter.dSYM/Contents/: Info.plist
ip_filter.dSYM/Contents/Resources/DWARF/: ip_filter
ip_filter.dSYM/Contents/Resources/Relocations/aarch64/: ip_filter.yml
